traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:9: error: not found: value toto
      ligneEst(compteur, toto, ordonnee, hauteur, largeur)
                         ^TraversalZigZag:34: error: reassignment to val
    abscisse = abscisse + 1
             ^TraversalZigZag:42: error: reassignment to val
    abscisse = abscisse - 1
             ^